--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   ],
   "require": {
     "php": "^8.2",
-    "illuminate/support": "^8.0"
+    "illuminate/support": "^8.0",
+    "raorsa/rw-file-cache": "^1.3"
   },
   "require-dev": {
     "orchestra/testbench": "^6.0",
